--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-blinker==1.9.0
-click==8.1.8
-colorama==0.4.6
-Flask==3.1.0
+Flask==2.1.2  # Downgraded to be compatible with Werkzeug 2.0.3
+Flask-Dance==5.0.0
+Flask-Login==0.6.2
+python-dotenv==1.0.0
 gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -9,4 +9,4 @@ MarkupSafe==3.0.2
 numpy==2.2.3
 packaging==25.0
 scipy==1.15.2
-Werkzeug==3.1.3
+Werkzeug==2.0.3  # Keep as is
