--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-Flask==2.1.2  # Downgraded to be compatible with Werkzeug 2.0.3
-Flask-Dance==5.0.0
-Flask-Login==0.6.2
-python-dotenv==1.0.0
-gunicorn==23.0.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-numpy==2.2.3
-packaging==25.0
-scipy==1.15.2
-Werkzeug==2.0.3  # Keep as is
+blinker==1.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.8
+colorama==0.4.6
+idna==3.10
+oauthlib==3.2.2
+requests==2.32.4
+requests-oauthlib==2.0.0
+urllib3==2.4.0
+URLObject==2.4.3
