--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "Backend/api/app.py",
-      "use": "@vercel/python",
-      "config": {
-        "runtime": "python3.9"
-      }
+      "src": "api/index.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/app.py"
+      "dest": "api/index.py"
     }
   ]
 }
