--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,19 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
+Flask==3.1.1
+flask-cors==6.0.1
+Flask-Dance==7.1.0
+Flask-Login==0.6.3
 idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 oauthlib==3.2.2
+python-dotenv==1.1.1
 requests==2.32.4
 requests-oauthlib==2.0.0
+serverless-wsgi==3.1.0
 urllib3==2.4.0
 URLObject==2.4.3
-Flask
-serverless-wsgi
-flask-cors
-python-dotenv
-flask-dance
+Werkzeug==3.1.3
